二分查找、集合类

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
             <version>9.4.2</version>
         </dependency>
 
+        <!--获取对象的内存地址-->
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.16</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
